--- a/notes/20190715/20190715_sqf_data_cleaning__Adnan.Rmd
+++ b/notes/20190715/20190715_sqf_data_cleaning__Adnan.Rmd
@@ -18,38 +18,38 @@ library(naniar)
 
 ```{r loading-all-the data-sets}
 
-df3 <- read.csv("sqf_2003.csv") 
+df3 <- read.csv("../../raw_data/sqf_2003.csv") 
 
-df4 <- read.csv("sqf_2004.csv") 
+df4 <- read.csv("../../raw_data/sqf_2004.csv") 
 
-df5 <- read.csv("sqf_2005.csv") 
+df5 <- read.csv("../../raw_data/sqf_2005.csv") 
 
-df6 <- read.csv("sqf_2006.csv")
+df6 <- read.csv("../../raw_data/sqf_2006.csv")
 
-df7 <- read.csv("sqf_2007.csv") 
+df7 <- read.csv("../../raw_data/sqf_2007.csv") 
 
-df8 <- read.csv("sqf_2008.csv") 
+df8 <- read.csv("../../raw_data/sqf_2008.csv") 
 
-df9 <- read.csv("sqf_2009.csv") 
+df9 <- read.csv("../../raw_data/sqf_2009.csv") 
 
-df10 <- read.csv("sqf_2010.csv") 
+df10 <- read.csv("../../raw_data/sqf_2010.csv") 
 
 
-df11 <- read.csv("sqf_2011.csv") 
+df11 <- read.csv("../../raw_data/sqf_2011.csv") 
 
-df12 <- read.csv("sqf_2012.csv") 
+df12 <- read.csv("../../raw_data/sqf_2012.csv") 
 
-df13 <- read.csv("sqf_2013.csv") 
+df13 <- read.csv("../../raw_data/sqf_2013.csv") 
 
-df14 <- read.csv("sqf_2014.csv") 
+df14 <- read.csv("../../raw_data/sqf_2014.csv") 
 
-df15 <- read.csv("sqf_2015.csv") 
+df15 <- read.csv("../../raw_data/sqf_2015.csv") 
 
-df16 <- read.csv("sqf_2016.csv") 
+df16 <- read.csv("../../raw_data/sqf_2016.csv") 
 
-df17 <- readxl::read_xlsx ("sqf_2017.xlsx")
+df17 <- readxl::read_xlsx ("../../raw_data/sqf_2017.xlsx")
 
-df18<- readxl::read_xlsx ("sqf_2018.xlsx")
+df18<- readxl::read_xlsx ("../../raw_data/sqf_2018.xlsx")
 ```
 
 ##Set the Column Names For 2013-18 to Lowercase
