--- a/notes/20190718/20190718_sqf_in_and_outofsample_scatterplots_Adnan.Rmd
+++ b/notes/20190718/20190718_sqf_in_and_outofsample_scatterplots_Adnan.Rmd
@@ -22,20 +22,22 @@ library(scales)
 ```{r load-in-sample-data}
 panel_data <- load("../../raw_data/sqf_03_13.Rdata")
 
+panel_data <- sf_data1
 
 panel_data <- panel_data %>%
+  mutate(race = recode_factor(race,"P" = "B","Q" = "H")) %>%
+  filter(race == "B" | race == "H" | race == "W") %>%
   mutate(wepnfnd = paste(contrabn,asltweap,pistol,riflshot,knifcuti,machgun,othrweap, sep = "")) %>%
   mutate(wepnfnd = if_else(grepl("Y",wepnfnd), "Y", "N"))  %>%
   mutate(pf_pp_spray_baton = paste(pf_pepsp, pf_baton,sep = "")) %>%
   mutate(pf_pp_spray_baton = ifelse(grepl("Y",pf_pp_spray_baton), "Y", "N")) %>%
-  mutate(race = recode_factor(race,"P" = "B","Q" = "H")) %>%
-  filter(race == "B" | race == "H" | race == "W") %>%
   mutate(timestop = as.numeric(timestop)) %>%
   mutate(daytime = ifelse(600<=timestop & timestop<=1700,"Y","N")) %>%
   mutate(verbal_id = if_else(grepl("V", typeofid), "Y", "N"),
          photo_id = if_else(grepl("P", typeofid), "Y", "N"),
          refused_id = if_else(grepl("R", typeofid), "Y", "N"),
-         other_id = if_else(grepl("O", typeofid), "Y", "N"))
+         other_id = if_else(grepl("O", typeofid), "Y", "N")) %>%
+  mutate(race = recode_factor(race, "W" = "White", "H" = "Hispanic", "B" = "Black"))
 
 ```
 
@@ -84,15 +86,15 @@ new_panelB_data_2 %>%
         plot.title = element_text(hjust = 0.5,size=20, color = "#374687",face = "bold"),
         legend.title = element_text(color = "#0d693e", face = "bold" ))+
   scale_color_manual(values=c("#893eb5", "#E69F00", "#56B4E9"), 
-                     name="Race",
-                     breaks=c( "B", "H","W"),
-                     labels=c( "Black", "Hispanic","White")) +
+                     name="Race") +
   scale_y_continuous(labels = percent_format(accuracy = 1)) +
   scale_x_discrete(labels = c("inout" = "Indoors", "daytime" = "Daytime", "ac_incid" = "High-crime \n Area",
                               "ac_time" = "High-crime Time", "offunif" = "Police in Uniform",
                               "othpers" = "Stopped With \n Others", "photo_id" = "Photo ID",
                               "verbal_id" = "Verbal ID", "refused_id" = "Refused ID",
-                              "other_id" = "Other ID"))
+                              "other_id" = "Other ID")) +
+  
+  ggsave(filename = file.path("../../figures/","in_sample_sqf_prop_encounter_char_by_race.png"))
 
 ```
 
@@ -107,7 +109,8 @@ new_panelC_data_1 <- panel_data %>%
   gather(variable,value,cs_bulge, cs_cloth, cs_casng, cs_lkout, cs_descr, cs_drgtr, cs_furtv,cs_vcrim,
          cs_objcs, cs_other,wepnfnd) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(panel_data))
+  summarise(count_y = n(), total = nrow(panel_data))%>%
+  mutate(year = "in_sample")
 
 new_panelC_data_2 <- panel_data %>%
   select(race, cs_bulge, cs_cloth, cs_casng, cs_lkout, cs_descr, cs_drgtr, cs_furtv,cs_vcrim,
@@ -116,7 +119,8 @@ new_panelC_data_2 <- panel_data %>%
          cs_objcs, cs_other,wepnfnd) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(panel_data))
+  summarise(count_x = n(), total = nrow(panel_data))%>%
+  mutate(year = "in_sample")
   
 
 new_panelC_data_2$count_y <- new_panelC_data_1$count_y
@@ -143,11 +147,12 @@ new_panelC_data_2 %>%
                      labels=c( "Black", "Hispanic","White")) +
   scale_y_continuous(labels = percent_format(accuracy = 1)) +
   scale_x_discrete(labels = c("cs_objcs"="Carrying \nSuspicious\n Objects", "cs_descr"="Fit \nRelevant\n Description",
-                              "cs_casng"="Preparing for\n Crime", "cs_lkout"="Lookout for\n Crime",
-                              "cs_cloth"="Dressed in \nCriminal Attire", "cs_drgtr"="Appearance of \nDrug \nTransanction",
-                              "cs_furtv"="Suspicious \nMovements","cs_vcrim"="Engaging in\n Violent \nCrime",
+                              "cs_casng"="Preparing\n for\n Crime", "cs_lkout"="Lookout\n for\n Crime",
+                              "cs_cloth"="Dressed\n in \nCriminal\n Attire", "cs_drgtr"="Appearance\n of \nDrug \nTransanction",
+                              "cs_furtv"="Suspicious \nMovements","cs_vcrim"="Engaging\n in\n Violent \nCrime",
                               "cs_bulge"="Concealing \nSuspicious\n Object", "cs_other"="Other \nSuspicious\n Behavior",
-                              "wepnfnd"="Contraband or\n Weapon Found"))
+                              "wepnfnd"="Contraband\n or\n Weapon\n Found"))
+  
 
 
 ```
@@ -160,13 +165,15 @@ new_panelD_data_1 <- panel_data %>%
   select(race,frisked, searched, arstmade, sumissue) %>%
   gather(variable,value, frisked, searched, arstmade, sumissue) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(panel_data))
+  summarise(count_y = n(), total = nrow(panel_data))%>%
+  mutate(year = "in_sample")
 new_panelD_data_2 <- panel_data %>%
   select(race,frisked, searched, arstmade, sumissue) %>%
   gather(variable,value, frisked, searched, arstmade, sumissue) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(panel_data))
+  summarise(count_x = n(), total = nrow(panel_data))%>%
+  mutate(year = "in_sample")
 
 new_panelD_data_2$count_y <- new_panelD_data_1$count_y
 
@@ -201,16 +208,18 @@ new_panelD_data_2 %>%
 ```{r in-sample-panel-e}
 #Panel E
 new_panelE_data_1 <- panel_data %>%
-  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
-  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
+  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
+  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton,pf_other) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(panel_data))
+  summarise(count_y = n(), total = nrow(panel_data))%>%
+  mutate(year = "in_sample")
 new_panelE_data_2 <- panel_data %>%
-  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
-  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
+  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
+  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(panel_data))
+  summarise(count_x = n(), total = nrow(panel_data)) %>%
+  mutate(year = "in_sample")
 
 new_panelE_data_2$count_y <- new_panelE_data_1$count_y
 
@@ -245,7 +254,7 @@ new_panelE_data_2 %>%
 
 ##LOAD OUT OF SAMPLE DATA
 ```{r load-out-of-sample-data}
-f14 <- read.csv("../../raw_data/sqf_2014.csv") 
+df14 <- read.csv("../../raw_data/sqf_2014.csv") 
 
 df15 <- read.csv("../../raw_data/sqf_2015.csv") 
 
@@ -275,17 +284,19 @@ os_panel_data <- data_14_16
 
 os_panel_data <- os_panel_data %>%
   mutate(wepnfnd = paste(contrabn,asltweap,pistol,riflshot,knifcuti,machgun,othrweap, sep = "")) %>%
+  mutate(race = recode_factor(race,"P" = "B","Q" = "H")) %>%
+  filter(race == "B" | race == "H" | race == "W") %>%
   mutate(wepnfnd = if_else(grepl("Y",wepnfnd), "Y", "N"))  %>%
   mutate(pf_pp_spray_baton = paste(pf_pepsp, pf_baton,sep = "")) %>%
   mutate(pf_pp_spray_baton = ifelse(grepl("Y",pf_pp_spray_baton), "Y", "N")) %>%
-  mutate(race = recode_factor(race,"P" = "B","Q" = "H")) %>%
-  filter(race == "B" | race == "H" | race == "W") %>%
   mutate(timestop = as.numeric(timestop)) %>%
   mutate(daytime = ifelse(600<=timestop & timestop<=1700,"Y","N")) %>%
   mutate(verbal_id = if_else(grepl("V", typeofid), "Y", "N"),
          photo_id = if_else(grepl("P", typeofid), "Y", "N"),
          refused_id = if_else(grepl("R", typeofid), "Y", "N"),
-         other_id = if_else(grepl("O", typeofid), "Y", "N"))
+         other_id = if_else(grepl("O", typeofid), "Y", "N"))%>%
+  mutate(race = recode_factor(race, "W" = "White", "H" = "Hispanic", "B" = "Black"))
+
 
 
 ```
@@ -302,7 +313,7 @@ new_os_panelB_data_1 <- os_panel_data %>%
   group_by(race,variable) %>%
   na.omit() %>%
   summarise(count_y = n(), total = nrow(os_panel_data))%>%
-  mutate(year = "in_sample")
+  mutate(year = "out_of_sample")
 
 new_os_panelB_data_2 <- os_panel_data %>%
   select(race,inout,daytime,ac_incid, ac_time, offunif, othpers,verbal_id,photo_id,
@@ -312,7 +323,7 @@ new_os_panelB_data_2 <- os_panel_data %>%
   filter(value == "Y" | value == "I") %>%
   group_by(race,variable,value) %>%
   summarise(count_x = n(), total = nrow(os_panel_data))%>%
-  mutate(year = "in_sample")
+  mutate(year = "out_of_sample")
 
 
 
@@ -355,7 +366,8 @@ new_os_panelC_data_1 <- os_panel_data %>%
   gather(variable,value,cs_bulge, cs_cloth, cs_casng, cs_lkout, cs_descr, cs_drgtr, cs_furtv,cs_vcrim,
          cs_objcs, cs_other,wepnfnd) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(os_panel_data))
+  summarise(count_y = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 
 new_os_panelC_data_2 <- os_panel_data %>%
   select(race, cs_bulge, cs_cloth, cs_casng, cs_lkout, cs_descr, cs_drgtr, cs_furtv,cs_vcrim,
@@ -364,7 +376,8 @@ new_os_panelC_data_2 <- os_panel_data %>%
          cs_objcs, cs_other,wepnfnd) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(os_panel_data))
+  summarise(count_x = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 
 
 new_os_panelC_data_2$count_y <- new_os_panelC_data_1$count_y
@@ -391,11 +404,11 @@ new_os_panelC_data_2 %>%
                      labels=c( "Black", "Hispanic","White")) +
   scale_y_continuous(labels = percent_format(accuracy = 1)) +
   scale_x_discrete(labels = c("cs_objcs"="Carrying \nSuspicious\n Objects", "cs_descr"="Fit \nRelevant\n Description",
-                              "cs_casng"="Preparing for\n Crime", "cs_lkout"="Lookout for\n Crime",
-                              "cs_cloth"="Dressed in \nCriminal Attire", "cs_drgtr"="Appearance of \nDrug \nTransanction",
-                              "cs_furtv"="Suspicious \nMovements","cs_vcrim"="Engaging in\n Violent \nCrime",
+                              "cs_casng"="Preparing\n for\n Crime", "cs_lkout"="Lookout\n for\n Crime",
+                              "cs_cloth"="Dressed\n in \nCriminal\n Attire", "cs_drgtr"="Appearance\n of \nDrug \nTransanction",
+                              "cs_furtv"="Suspicious \nMovements","cs_vcrim"="Engaging\n in\n Violent \nCrime",
                               "cs_bulge"="Concealing \nSuspicious\n Object", "cs_other"="Other \nSuspicious\n Behavior",
-                              "wepnfnd"="Contraband or\n Weapon Found"))
+                              "wepnfnd"="Contraband\n or\n Weapon Found"))
 
 
 ```
@@ -408,13 +421,15 @@ new_os_panelD_data_1 <- os_panel_data %>%
   select(race,frisked, searched, arstmade, sumissue) %>%
   gather(variable,value, frisked, searched, arstmade, sumissue) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(os_panel_data))
+  summarise(count_y = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 new_os_panelD_data_2 <- os_panel_data %>%
   select(race,frisked, searched, arstmade, sumissue) %>%
   gather(variable,value, frisked, searched, arstmade, sumissue) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(os_panel_data))
+  summarise(count_x = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 
 new_os_panelD_data_2$count_y <- new_os_panelD_data_1$count_y
 
@@ -452,16 +467,18 @@ new_os_panelD_data_2 %>%
 #Panel E
 
 new_os_panelE_data_1 <- os_panel_data %>%
-  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
-  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
+  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
+  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
   group_by(race,variable) %>%
-  summarise(count_y = n(), total = nrow(os_panel_data))
+  summarise(count_y = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 new_os_panelE_data_2 <- os_panel_data %>%
-  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
-  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton) %>%
+  select(race,pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
+  gather(variable,value, pf_hands, pf_grnd, pf_wall, pf_drwep, pf_ptwep, pf_hcuff, pf_pp_spray_baton, pf_other) %>%
   filter(value == "Y") %>%
   group_by(race,variable,value) %>%
-  summarise(count_x = n(), total = nrow(os_panel_data))
+  summarise(count_x = n(), total = nrow(os_panel_data))%>%
+  mutate(year = "out_of_sample")
 
 new_os_panelE_data_2$count_y <- new_os_panelE_data_1$count_y
 
