html file updated

--- a/sqf_tables.Rmd
+++ b/sqf_tables.Rmd
@@ -2,7 +2,8 @@
 title: "Stop, Question, and Frisk Logistic Regressions"
 author: "Adnan Hoq"
 date: "12/16/2019"
-output: html_document
+output:
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -28,8 +29,7 @@ library(kableExtra)
 
 ```{r load-data}
 
-log_data <- read.csv('log_data.csv')
-#load("log_data.Rdata")
+log_data <- readRDS('log_data2.rds')
 
 ```
 
@@ -123,12 +123,7 @@ exp(coef(model_civ_behv))
 
 
 #model with precinct and year levels added as controls
- model_full_control <- glm(any_force_used ~ race + sex + age + I(age^2) + inout + daytime + ac_incid + ac_time +
-                             offunif + typeofid + othpers + cs_bulge + cs_cloth + cs_casng + cs_lkout +
-                             cs_descr + cs_drgtr + cs_furtv + cs_vcrim +
-                             cs_objcs + cs_other + wepnfnd + pct + year,
-                           data = log_data,
-                           family = "binomial")
+ load("model.rda")
 
 
 #create a data frame with the odds ratios of each race relative to the white mean from the full control model
@@ -157,7 +152,7 @@ exp(coef(model_full_control))
 ```
 
 
-## Run Fryer's Logistic Regression Models
+## Results of Fryer's Logistic Regression Models
 
 ```{r fryer-model, warning = FALSE}
 
