--- a/10_c_sqf_tables.Rmd
+++ b/10_c_sqf_tables.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r include=FALSE}
+library(pacman)
 library(tidyverse)
 library(gridExtra)
 library(naniar)
