--- a/06B_clean_ppcs_1999.Rmd
+++ b/06B_clean_ppcs_1999.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r load-libraries}
+library(pacman)
 library(tidyverse)
 library(asciiSetupReader)
 library(foreign)
