--- a/06A_clean_ppcs_1996.Rmd
+++ b/06A_clean_ppcs_1996.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # Load Libraries
 
 ```{r load-libraries}
+library(pacman)
 library(tidyverse)
 library(asciiSetupReader)
 library(here)
