--- a/06G_clean_ppcs_2015.Rmd
+++ b/06G_clean_ppcs_2015.Rmd
@@ -7,6 +7,7 @@ output:
 
 ```{r load-and-set-up}
 # load and set-up
+library(pacman)
 library(here)
 library(tidyverse)
 load(here('raw_data','ppcs_2015_raw.rda'))
