use pacman::p_load for ppcs

--- a/06A_clean_ppcs_1996.Rmd
+++ b/06A_clean_ppcs_1996.Rmd
@@ -12,10 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 # Load Libraries
 
 ```{r load-libraries}
-library(pacman)
-library(tidyverse)
-library(asciiSetupReader)
-library(here)
+if (!require("pacman")) install.packages("pacman")
+pacman::p_load(tidyverse, asciiSetupReader, here)
 ```
 
 #Load Data
