--- a/06E_clean_ppcs_2008.Rmd
+++ b/06E_clean_ppcs_2008.Rmd
@@ -6,10 +6,8 @@ output: html_document
 ```{r}
 # load 2008 ppcs data
 
-library(pacman)
-library(readr)
-library(tidyverse)
-library(here)
+if (!require("pacman")) install.packages("pacman")
+pacman::p_load(readr, tidyverse, here)
 ```
 
 ```{r}
