--- a/03_download_census_race_data.Rmd
+++ b/03_download_census_race_data.Rmd
@@ -8,10 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
-library(pacman)
-library(here)
-library(tidyverse)
-library(tidycensus)
+if (!require("pacman")) install.packages("pacman")
+pacman::p_load(here, tidyverse, tidycensus)
 
 ```
 
